# wpmodel

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/wpmodel/: cfg.yml  constants.py  core.py  helpers.py  integration.py  strings.py  strings.yml  utils.py  wpmodel.py
