[build-system]
requires = [
	'hatchling',
	'pandas',
	'numpy',
	'pyyaml',
	'dill',
	'azure-storage-blob',
	'wpconnect @ git+https://github.com/wphospital/wpconnect',
	'sprucepy @ git+https://github.com/wphospital/sprucepy'
]
build-backend = 'hatchling.build'

[project]
name = 'wpmodel'
version = '0.0.1'
authors = [
  { name='Jon Sege', email='jsege@wphospital.org' },
  { name='Cheng Feng', email='chfeng@wphospital.org'}
]
description = 'A package for standard WPH model deployment'
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wphospital/wpmodel"
"Bug Tracker" = "https://github.com/wphospital/wpmodel.issues"